--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@mui/material": "^5.11.9",
     "ahooks": "^3.7.4",
     "axios": "^1.3.3",
+    "konva": "^8.4.2",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-window": "^1.8.8"
+    "react-konva": "^18.2.5",
+    "react-window": "^1.8.8",
+    "use-image": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
