--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/lab": "5.0.0-alpha.120",
     "@mui/material": "^5.11.9",
+    "@react-spring/konva": "^9.7.1",
     "ahooks": "^3.7.4",
     "axios": "^1.3.3",
     "konva": "^8.4.2",
