--- a/package.json
+++ b/package.json
@@ -17,18 +17,21 @@
     "@react-spring/konva": "^9.7.1",
     "ahooks": "^3.7.4",
     "axios": "^1.3.3",
+    "jotai": "^2.6.1",
     "konva": "^8.4.2",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.5",
+    "react-virtualized": "^9.22.5",
     "react-window": "^1.8.8",
     "use-image": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-virtualized": "^9.21.29",
     "@types/react-window": "^1.8.5",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
