--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/lab": "5.0.0-alpha.120",
     "@mui/material": "^5.11.9",
+    "@react-hook/window-size": "^3.1.1",
     "@react-spring/konva": "^9.7.1",
     "ahooks": "^3.7.4",
     "axios": "^1.3.3",
@@ -21,6 +22,8 @@
     "konva": "^8.4.2",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "masonic": "^3.7.0",
+    "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.5",
